# fhe-http

./: .gitignore  Cargo.toml  README.md  requirements.txt  setup.md  setup.py
.github/workflows/: build.yml  ci-cd.yml
assembler/: assembler.py  configs.py  parser.out  parsetab.py
benches/: my_benchmark.rs
benches/gpu_benchmarks/: main.rs
examples/: request.txt  response.txt
examples/json_files/: param.json  user.json
fhe_http_core/: Cargo.toml  build.rs
fhe_http_core/examples/: response.txt
fhe_http_core/src/: lib.rs  main.rs
fhe_http_core/src/apis/: assembly.rs  base64.rs  fhe.rs  fhe_ops.rs  fhe_types.rs  http.rs  mod.rs  proven_fhe_ops.rs
fhe_http_core/src/assembly/: parser.rs
fhe_http_core/src/assembly/executor/: mod.rs  signed_integer.rs  unsigned_integer.rs
fhe_http_core/src/configs/: errors.rs  fhe_types.rs  instructions.rs  json.rs  mod.rs  traits.rs  typing.rs  zk_params.rs
fhe_http_core/src/fhe_traits/: computable.rs  decryptable.rs  encryptable.rs  encrypted_serialize.rs  key_serialize.rs  mod.rs  value_serialize.rs
fhe_http_core/src/fhe_traits/computable/: computable.rs  mod.rs  proven_computable.rs
fhe_http_core/src/fhe_traits/decryptable/: integers.rs  mod.rs
fhe_http_core/src/fhe_traits/encryptable/: integers.rs  mod.rs
fhe_http_core/src/fhe_traits/serializable/: fhe_value.rs  fhe_value_serialable.rs  key.rs  key_serializable.rs  mod.rs  proven_fhe_value.rs  value.rs  value_serializable.rs  zk.rs
fhe_http_core/src/utils/: assembly_parser.rs  base64.rs  file_ctl.rs  http.rs  json.rs  mod.rs  rle_compression.rs
fhe_http_core/tests/: assembly.rs  base64.rs  compression.rs  fhe.rs  fhe_ops.rs  json.rs
fhe_http_js/: README.md  package-lock.json  package.json  setup.md  tsconfig.json
fhe_http_js/__tests__/: encrypt.js  keyGen.js  operations.js
fhe_http_js/__tests__/interaction/: client.js  package-lock.json  package.json  server.js  web_server.js
fhe_http_js/crates/fhe_http_js/: Cargo.toml
fhe_http_js/crates/fhe_http_js/src/: lib.rs
fhe_http_js/crates/fhe_http_js/src/apis/: base64.rs  fhe.rs  fhe_ops.rs  http.rs  key_generator.rs  proven_fhe_ops.rs  serializer.rs  server_key_setter.rs
fhe_http_js/crates/fhe_http_js/src/configs/: error.rs  typing.rs  zk_params.rs
fhe_http_js/crates/fhe_http_js/src/utils/: conversion.rs
fhe_http_js/src/: index.cts  load.cts
fhe_http_python/: Cargo.toml  README.md  modules.pyi  pyproject.toml  requirements.txt  setup.md  setup.py
fhe_http_python/fhe/: Cargo.toml  pyproject.toml
fhe_http_python/fhe/src/apis/: proven_fhe_ops.rs
fhe_http_python/fhe/tests/: assembly.py  operations.py  proven_operations.py
fhe_http_python/fhe/tests/interaction/: server_test.py
fhe_http_python/fhe_http/: __init__.py
fhe_http_python/fhe_http/assembler/: parser.out
fhe_http_python/src/: lib.rs
fhe_http_python/src/apis/: assembly.rs  base64.rs  fhe.rs  fhe_ops.rs  fhe_types.rs  http.rs  key_generator.rs  mod.rs  proven_fhe_ops.rs  serializer.rs  server_key_setter.rs
fhe_http_python/src/configs/: params.rs  typing.rs  zk_params.rs
fhe_http_python/src/utils/: conversion.rs
fhe_http_python/tests/: assembly.py  client_test.py  http.py  integration.py  integration.rs  operations.py  proven_operations.py  server_test.py
fhe_http_python/tests/interaction/: client_test.py  server_test.py
fhe_http_wasm/: Cargo.toml  README.md
fhe_http_wasm/src/: lib.rs
fhe_http_wasm/src/apis/: base64.rs  fhe.rs  fhe_ops.rs  http.rs  key_generator.rs  proven_fhe_ops.rs  serializer.rs  server_key_setter.rs
fhe_http_wasm/src/configs/: error.rs  typing.rs  zk_params.rs
fhe_http_wasm/src/utils/: conversion.rs  web.rs
fhe_http_wasm/tests/: greeting.html  index.html
fhe_http_web/: .gitignore  README.md  build_tfhe_pkg.sh  package-lock.json  package.json  webpack.config.js
fhe_http_web/src/: custom.d.ts  custom.js
src/: lib.rs  main.rs
src/apis/: fhe_ops.rs
src/configs/: fhe_types.rs  json.rs  types.rs
src/fhe/: computable.rs  mod.rs
src/fhe_traits/: computable.rs  decryptable.rs  key_serialize.rs
src/pyo3/: key_generator.rs
src/utils/: base64.rs  fhe.rs  file_ctl.rs  json.rs  mod.rs
tests/: base64.rs  fhe.rs  fhe_ops.rs  json.rs
