[package]
name = "fhe_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { version = "*", features = ["boolean", "shortint", "integer", "aarch64-unix"] }
clap = "4.5.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
