[package]
name = "fhe_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
name = "fhe"

[dependencies]
pyo3 = { version = "0.22.1", features = ["extension-module"] }
fhe_http_core = { path = "../fhe_http_core" }
project-root = "0.2.2"
serde_json = "1.0.116"
zstd = "0.13.1"
concat-idents = "=1.1.5"


[package.metadata.maturin]
name = "fhe_http"
