[package]
name = "fhe_http_js"
version = "0.1.0"
description = "Js interface for fhe-http"
authors = ["spockwall"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]


[dependencies]
fhe_http_core = { path = "../../../fhe_http_core" }
neon-macros = "1.1.0-alpha.0"
neon = "1.1.0-alpha.0"
